# arcade_shooter

./: .gitignore  CMakeLists.txt  Makefile
src/: bullet.c  bullet.h  config.h  dmg_number.c  dmg_number.h  enemy.c  enemy.h  entity.c  entity.h  entity_list.c  entity_list.h  game.c  game.h  main.c  physics.c  physics.h  player.c  player.h  powerup.c  powerup.h  types.h  ui.c  ui.h  utils.c  utils.h  wall.c  wall.h  xp_gem.c  xp_gem.h
